# streamlib

./: .amos-status  .amosrc.toml  .dockerignore  .env.dev  .envrc.example  .gitignore  .lefthook.yml  BUGFIX_AUDIO_MIXER_FRAME_LOSS.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_WHIP_CONFIG.md  Cargo.toml  DEMOS.md  DESIGN_REPORT_TASK2.md  Dockerfile  ENGINE_GPU_SETUP_RACE_HANDOFF.md  FINISH_LINE_HANDOFF.md  FIXES.md  GPU_CLEANUP_TASK.md  HANDOFF_885.md  LICENSE  LOOP.md  MULTI_OUTPUT_SYNC_ANALYSIS.md  OPTIMIZATION_NOTES.md  PHASE3_PROGRESS.md  PHASE_1_1_COMPLETE.md  PHASE_1_2_1_3_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_MIGRATION_GUIDE.md  PHASE_6_COMPLETE.md  PLAN.md  PLANNING.md  PLUGIN_SDK_HANDOFF.md  PORT_API_DEVELOPER_EXPERIENCE_REPORT.md  PORT_API_IMPROVEMENT_PLAN.md  PORT_API_MIGRATION_REPORT_2025_11_10.md  (+53 more)
adapters/streamlib-adapter-abi/: Cargo.toml
adapters/streamlib-adapter-abi/src/: adapter.rs  conformance.rs  error.rs  ffi.rs  lib.rs  subprocess_crash.rs  surface.rs
adapters/streamlib-adapter-cpu-readback-abi/: Cargo.toml
adapters/streamlib-adapter-cpu-readback-abi/src/: lib.rs
adapters/streamlib-adapter-opengl-abi/: Cargo.toml
adapters/streamlib-adapter-opengl-abi/src/: lib.rs
examples/api-server/: .gitignore  Cargo.toml  README.md  setup.sh
examples/api-server-demo/: Cargo.toml  README.md  setup.sh
examples/api-server-demo/src/: main.rs
examples/api-server/src/: main.rs
examples/audio-mixer-demo/: .gitignore  Cargo.toml  README.md  project.json  setup.sh
examples/audio-mixer-demo/src/: main.rs
examples/audio-test/: README.md  project.json  pyproject.toml
examples/camera-audio-recorder/: .gitignore  Cargo.toml  README.md  project.json  setup.sh  streamlib.yaml
examples/camera-audio-recorder/src/: main.rs
examples/camera-deno-subprocess/: Cargo.toml  README.md  setup.sh
examples/camera-deno-subprocess/deno/: .npmrc  deno.json  grayscale_processor.ts  halftone_processor.ts  halftone_processor.yaml  processor.yaml  streamlib.toml  streamlib.yaml
examples/camera-deno-subprocess/runner/: Cargo.toml  streamlib.yaml
examples/camera-deno-subprocess/src/: main.rs
examples/camera-display/: Cargo.toml  README.md  project.json  setup.sh  streamlib.yaml  test_main_thread.rs
examples/camera-display/src/: main.rs
examples/camera-dylib-display/: Cargo.toml
examples/camera-dylib-display/.claude/: ralph-loop.local.md
examples/camera-dylib-display/assets/: old-school-crt.glsl
examples/camera-dylib-display/python/: cyberpunk_processor.py
examples/camera-dylib-display/src/: main.rs  plugin_loader.rs
examples/camera-plugin-sdk-compute/: .gitignore  Cargo.toml  README.md  setup.sh
examples/camera-plugin-sdk-compute/plugin/: .gitignore  Cargo.toml  build.rs  streamlib.yaml
examples/camera-plugin-sdk-compute/src/: main.rs
examples/camera-python-display/: .gitignore  Cargo.toml  README.md  build.rs  pipeline-graph.mmd  pipeline.json  setup.sh  snapshot.json  streamlib.yaml
examples/camera-python-display/effects/: Cargo.toml  build.rs  streamlib.yaml
examples/camera-python-display/python/: avatar_character.py  avatar_character.yaml  character_renderer_3d.py  cyberpunk_glitch.py  cyberpunk_glitch.yaml  cyberpunk_lower_third.py  cyberpunk_lower_third.yaml  cyberpunk_processor.py  cyberpunk_watermark.py  cyberpunk_watermark.yaml  grayscale_processor.py  pose_overlay_renderer.py  pyproject.toml  streamlib.toml  streamlib.yaml
examples/camera-python-display/runner/: Cargo.toml  build.rs  streamlib.yaml
examples/camera-python-display/rust/: Cargo.toml
examples/camera-python-display/src/: blending_compositor.rs  blending_compositor.yaml  blending_compositor_kernel.rs  camera_to_cuda_copy.rs  crt_film_grain.rs  crt_film_grain.yaml  crt_film_grain_kernel.rs  cyberpunk_compositor.rs  frame_boost.rs  linux.rs  macos.rs  main.rs  plugin_loader.rs
examples/camera-python-subprocess/: Cargo.toml  README.md  setup.sh
examples/camera-python-subprocess/python/: camera-python-subprocess-0.1.0.slpkg  grayscale_processor.py  passthrough_processor.py  processor.yaml  pyproject.toml  streamlib.toml  streamlib.yaml
examples/camera-python-subprocess/runner/: Cargo.toml  streamlib.yaml
examples/camera-python-subprocess/src/: main.rs
examples/camera-rust-plugin/: .gitignore  Cargo.toml  README.md  setup.sh
examples/camera-rust-plugin/plugin/: Cargo.toml  build.rs  streamlib.yaml
examples/camera-rust-plugin/src/: main.rs
examples/camera-with-bouncing-ball/: README.md  main.py  project.json  pyproject.toml
examples/cuda-fisheye-detection/: .gitignore  Cargo.toml  README.md  setup.sh
examples/cuda-fisheye-detection/python/: pyproject.toml  streamlib.yaml
examples/cuda-fisheye-detection/runner/: Cargo.toml  streamlib.yaml
examples/cuda-fisheye-detection/src/: main.rs
examples/h264-opus-validator/: .gitignore  Cargo.toml  README.md  setup.sh
examples/h264-opus-validator/src/: main.rs  videotoolbox_encoder.rs  (+1 more)
examples/iceoryx2-ipc-test/: Cargo.toml
examples/iceoryx2-producer-consumer/: Cargo.toml  iceoryx2_test_consumer.yaml  iceoryx2_test_producer.yaml
examples/jpeg-psnr/: Cargo.toml  README.md  setup.sh  streamlib.yaml
examples/microphone-reverb-speaker/: Cargo.toml  README.md  project.json  setup.sh
examples/moq-av-publish/: Cargo.toml
examples/moq-data/: Cargo.toml
examples/moq-link-transport/: Cargo.toml
examples/moq-roundtrip/: Cargo.toml  README.md  setup.sh  streamlib.yaml
examples/news-cast/: Cargo.toml  project.json
xtask/: Cargo.toml
xtask/src/: build_plugins.rs  check_abi_republish.rs  check_boundaries.rs  check_cdylib_reach.rs  check_consumer_rhi_repr.rs  check_device_wait_idle.rs  check_no_escalate_in_lifecycle.rs  check_no_inventory_submit.rs  check_no_reverse_dns.rs  check_no_streamlib_metadata.rs  check_package_version_drift.rs  check_processor_spec_new.rs  check_schema_versions.rs  check_vendored_vulkanalia.rs  generate_schemas.rs  install_packages.rs  lint_logging.rs  main.rs  manifest_schema.rs  release.rs
(+3256 files in other folders)
