[workspace]
resolver = "2"
members = [
    "xtask",                    # Development tasks (cargo xtask <command>)
    "libs/streamlib",           # All-in-one: core, apple (feature-gated)
    "libs/streamlib-surface-client", # Wire-format helpers for the per-runtime surface-sharing socket (Linux)
    "libs/streamlib-cli",       # Command-line interface for StreamLib runtime
    "libs/streamlib-runtime",   # Standalone runtime binary (spawned by CLI)
    "libs/streamlib-codegen-shared", # Execution types shared between streamlib and streamlib-macros
    "libs/streamlib-macros",    # Procedural macros for reducing boilerplate
    "libs/streamlib-plugin-abi", # ABI-stable FFI types for dynamic plugins
    "libs/streamlib-adapter-abi", # ABI-stable surface adapter contract (in-tree + 3rd-party adapters)
    "libs/streamlib-consumer-rhi", # Consumer-side carve-out of the Vulkan RHI — DMA-BUF FD import + bind + map. cdylibs depend on this NOT the full streamlib so the FullAccess capability boundary is type-system enforced (Linux)
    "libs/streamlib-adapter-vulkan", # Vulkan-native surface adapter — canonical implementor of VulkanWritable / VulkanImageInfoExt (Linux)
    "libs/streamlib-adapter-vulkan-helpers", # Test-helper binaries for streamlib-adapter-vulkan — held in a dedicated crate so streamlib doesn't leak into adapter-vulkan's runtime dep graph (Linux)
    "libs/streamlib-adapter-opengl", # OpenGL/EGL surface adapter — canonical implementor of GlWritable; DMA-BUF + DRM modifier import (Linux)
    "libs/streamlib-adapter-cpu-readback", # Explicit GPU→CPU surface adapter — sole implementor of CpuReadable / CpuWritable (Linux)
    "libs/streamlib-adapter-cpu-readback-helpers", # Test-helper binaries for streamlib-adapter-cpu-readback — held in a dedicated crate so streamlib doesn't leak into adapter-cpu-readback's runtime dep graph (Linux)
    "libs/streamlib-adapter-cuda", # CUDA surface adapter — Vulkan↔CUDA OPAQUE_FD interop foundation for GPU-resident AI inference (Linux, #587)
    "libs/streamlib-adapter-cuda-helpers", # Test-helper crate for streamlib-adapter-cuda — held in a dedicated crate so streamlib (and the optional CUDA SDK) don't leak into adapter-cuda's runtime dep graph (Linux)
    "libs/streamlib-adapter-skia", # Skia surface adapter — composes on streamlib-adapter-vulkan; customer sees skia::Surface directly, never GrVkImageInfo / VkImageLayout (Linux)
    "libs/streamlib-deno-native", # FFI cdylib for Deno subprocess iceoryx2 access
    "libs/streamlib-python-native", # FFI cdylib for Python subprocess iceoryx2 access
    "libs/streamlib-ipc-types",  # Shared iceoryx2 payload types for cross-process IPC
    # TODO: Migrate to iceoryx2 API - these examples depend on processors that haven't been migrated yet
    # "examples/simple-pipeline", # Example: Basic processing pipeline (uses AudioOutputProcessor)
    "examples/camera-display",  # Example: Camera capture and display (uses CameraProcessor, DisplayProcessor)
    "examples/camera-audio-recorder", # Example: Record camera + audio to MP4 (uses camera, audio, mp4 writer)
    "examples/screen-recorder",       # Example: Screen recording to MP4 (uses ScreenCaptureProcessor)
    "examples/microphone-reverb-speaker", # Example: Audio processing with CLAP (uses audio capture, clap, audio output)
    "examples/audio-mixer-demo", # Example: Mixing multiple audio streams (uses AudioOutputProcessor)
    "examples/webrtc-cloudflare-stream", # Example: WebRTC streaming to Cloudflare (uses WebRTC WHIP)
    # "examples/moq-roundtrip",             # Example: MoQ roundtrip test — temporarily disabled pending H.264 processor rewrite in #254
    # "examples/whep-player",     # Example: WHEP (WebRTC egress) player (uses WebRTC WHEP)
    # "examples/runtime-graph-json-demo",   # Example: Runtime graph JSON serialization (uses CameraProcessor, etc.)
    # "examples/graph-json-export",         # Example: Graph data structure JSON export (uses custom processors with old syntax)
    "examples/api-server",                # Example: Minimal API server (runtime + wait_for_signal)
    "examples/api-server-demo",           # Example: API server processor demo
    "examples/tokio-integration",         # Example: StreamRuntime with existing tokio runtime
    "examples/camera-python-display",     # Example: Camera → Python → Display pipeline
    "examples/camera-python-subprocess",  # Example: Camera → Python subprocess → Display pipeline
    "examples/camera-deno-subprocess",   # Example: Camera → Deno subprocess → Display pipeline
    "examples/polyglot-dma-buf-consumer", # Example: Camera → Python DMA-BUF consumer → Display (Linux polyglot E2E)
    "examples/polyglot-cpu-readback-blur", # Example: Polyglot cpu-readback adapter — Python cv2 / Deno hand-rolled Gaussian blur (#529)
    "examples/polyglot-manual-source",       # Example: Polyglot manual source — Python/Deno worker thread paced by MonotonicTimer (#542)
    "examples/polyglot-manual-source/plugin", # Counting-sink Rust dylib plugin for polyglot-manual-source (#604)
    "examples/polyglot-continuous-processor", # Example: Polyglot continuous processor — Python/Deno process() driven by monotonic-clock timerfd (#542)
    "examples/polyglot-opengl-fragment-shader", # Example: Polyglot OpenGL adapter — Python Mandelbrot / Deno plasma fragment shader rendered into a host DMA-BUF (#530)
    "examples/polyglot-vulkan-compute",   # Example: Polyglot Vulkan adapter — Python/Deno Mandelbrot compute kernel dispatched against a host DMA-BUF VkImage (#531)
    "examples/polyglot-skia-canvas",      # Example: Polyglot Skia adapter — Python skia-python draws into a host DMA-BUF VkImage via composing on the Vulkan adapter (#513)
    "examples/polyglot-cuda-inference",   # Example: Polyglot CUDA adapter — Python YOLO inference / Deno DLPack capsule validation against a host OPAQUE_FD VkBuffer (#591)
    "examples/camera-rust-plugin",       # Example: Camera → Rust dylib plugin → Display pipeline
    "examples/camera-rust-plugin/plugin", # Grayscale plugin cdylib for camera-rust-plugin example
    "examples/vulkan-video-roundtrip",    # Example: Vulkan Video encode roundtrip (BgraFileSource → Encoder → MP4Writer)
    "examples/vulkan-video-psnr",         # Example: fixture-driven encode/decode PSNR rig (#305)
    "tests/iceoryx2-cross-language",      # Test: Cross-language iceoryx2 validation (Rust ↔ Python)
    "libs/vulkan-video",                  # Vulkan Video encoder/decoder (H.264/H.265 via Vulkan Video extensions)
    "libs/vulkan-video/examples/h264-codec", # Example: H.264 encode/decode roundtrip
    "libs/vulkan-video/examples/h265-codec", # Example: H.265 encode/decode roundtrip
]

[workspace.package]
version = "0.4.25"
edition = "2024"
rust-version = "1.85"
authors = ["Jonathan Fontanez <fontanezj1@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/tato123/streamlib"

# Workspace-wide clippy lints. Library crates opt in by adding
# `[lints] workspace = true` in their own Cargo.toml. Binary-only crates
# (streamlib-cli, streamlib-runtime, xtask, examples) do not opt in, because
# stdout IS the user output channel for them. The `disallowed-macros` list
# itself lives in clippy.toml at the workspace root. See docs/logging.md.
[workspace.lints.clippy]
disallowed_macros = "deny"

[workspace.dependencies]
# Core dependencies
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"
rmp-serde = "1.3"

# Hashing
sha2 = "0.10"

# Typed bitflags (used by streamlib-adapter-abi)
bitflags = "2.6"

# Platform bindings (objc2 ecosystem - latest versions)
# Note: All objc2 crates must use compatible versions
objc2 = "0.6.3"
objc2-metal = "0.3.2"
objc2-io-surface = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-video = "0.3.2"
objc2-core-media = "0.3.2"
objc2-foundation = "0.3.2"
objc2-av-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-core-text = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-vision = "0.3.2"
libc = "0.2.177"

# Vulkan bindings (tatolab fork for VMA 3.3.0 patch)
vulkanalia = { git = "https://github.com/tatolab/vulkanalia.git", rev = "982d32d293e5425753d595978776ee4fa4ded3a1", features = ["libloading", "provisional", "window"] }
vulkanalia-vma = { git = "https://github.com/tatolab/vulkanalia.git", rev = "982d32d293e5425753d595978776ee4fa4ded3a1" }

# SPIR-V reflection for descriptor-set-layout validation in the compute-kernel RHI.
rspirv-reflect = "0.9.0"

# DLPack v0.8 + v1.0 `#[repr(C)]` ABI mirrors for cross-framework
# zero-copy tensor handoff (PyTorch / JAX / NumPy `from_dlpack`).
# Pinned exact (`=0.6.0`) so the upgrade story is explicit — a layout
# change upstream is an API-break here, not a silent minor bump.
# `default-features = false` keeps the dep surface to `bitflags` +
# `snafu`; the optional `pyo3` / `ndarray` / `cudarc` features stay off
# so the cdylib boundary doesn't pick up Python or ML transitive deps.
dlpark = { version = "=0.6.0", default-features = false }

# CUDA bindings — used by `streamlib-adapter-cuda-helpers` (test-only,
# behind a `cuda` Cargo feature) and by the polyglot cdylib runtimes
# (`streamlib-python-native`, `streamlib-deno-native`) to import OPAQUE_FD
# Vulkan memory + timeline semaphores into CUDA via
# `cudaImportExternalMemory` / `cudaImportExternalSemaphore`. The cdylibs
# depend on cudarc unconditionally (Linux-only) but `fallback-dynamic-loading`
# means libcuda.so is only required at runtime — build hosts without a
# CUDA toolkit still compile the cdylib, and runtime detection via
# `cudarc::runtime::sys::is_culib_present()` lets the adapter fail
# gracefully on CUDA-less machines.
#
# Pin to `cuda-12090` so the build does NOT require `nvcc` (the
# `cuda-version-from-build-system` alternative errors when nvcc is
# absent). The `_v2`-suffixed external-resource symbols this binding
# exposes remain ABI-stable through CUDA 13.x — runtime libcudart
# continues to export them, so the dlopen path resolves regardless of
# which CUDA version is installed on the runner. `default-features =
# false` skips cuBLAS / cuRAND / NVRTC; we only need `runtime` (for
# external-memory + external-semaphore APIs).
cudarc = { version = "0.19", default-features = false, features = ["driver", "runtime", "fallback-dynamic-loading", "cuda-12090"] }

# Skia bindings for the streamlib-adapter-skia crate.
#
# - `vulkan`: GrDirectContext + GrVkImageInfo + GrBackendRenderTarget
#   machinery needed to wrap a host-allocated VkImage as a SkSurface.
# - `binary-cache` (default): pull pre-built Skia binaries from the
#   rust-skia release tarballs instead of compiling Skia C++ from
#   source. Without this the build needs `git-sync-deps`, GN, ninja,
#   and 15+ minutes — way out of scope for this repo's CI.
#
# We deliberately do NOT enable `textlayout` / `embed-icudtl` / `pdf`
# (the rust-skia defaults) — those drag fontconfig + freetype + harfbuzz
# + ICU / harfbuzz-icu link deps that aren't available in dev-package
# form on a baseline Linux install. The text-rendering Python smoke
# test from the v1 issue body moves to the polyglot Skia follow-up
# along with the rest of the wrapper layer; the Rust adapter doesn't
# render text.
skia-safe = { version = "0.86", features = ["vulkan", "gl"] }

# Shader compilation
# TODO: Add when implementing HLSL shader compilation:
#   - hassle-rs (DXC wrapper for HLSL → SPIR-V)
#   - spirv-cross-rs (SPIR-V → Metal/Vulkan)

# WebRTC
str0m = "0.11.1"

# MoQ (Media over QUIC) - optional transport layer (cloudflare/moq-rs)
moq-transport = "0.14.1"
web-transport = "0.10"
quinn = "0.11"
rustls-native-certs = "0.8"

# HTTP/Web
axum = { version = "0.8.8", features = ["ws"] }
tower-http = "0.6.8"
hyper = "1.7.0"


# YUV/RGB conversion - REMOVED (now using GPU-accelerated VTPixelTransferSession)
# yuv = "0.8"

[patch.crates-io]
vulkanalia = { git = "https://github.com/tatolab/vulkanalia.git", rev = "982d32d293e5425753d595978776ee4fa4ded3a1" }
vulkanalia-sys = { git = "https://github.com/tatolab/vulkanalia.git", rev = "982d32d293e5425753d595978776ee4fa4ded3a1" }
