[workspace]
resolver = "2"
members = [
    "sdk/streamlib-error", # engine-free: canonical Error + Result
    "sdk/streamlib-plugin-sdk", # engine-free authoring SDK (cdylib arm of the dual-mode views + glue)
    "sdk/vulkan-jpeg", # engine-free JPEG decoder — CPU parser + Huffman entropy decode + fused Vulkan-compute kernel (cdylib-safe; nvJPEG backend parked in the engine)
    "xtask",                    # Development tasks (cargo xtask <command>)
    "sdk/streamlib-sdk",       # Public authoring API surface — customer apps depend on this (Cargo name `streamlib`)
    "runtime/streamlib-engine",    # Engine internals (RHI, IPC, surface-share, runtime executor) — private dep of the SDK
    "runtime/streamlib-surface-client", # Wire-format helpers for the per-runtime surface-sharing socket (Linux)
    "tools/streamlib-cli",       # Command-line interface for StreamLib runtime
    "tools/streamlib-cargo-build", # Cargo-build orchestration helpers shared between `streamlib pack` and `streamlib-build-orchestrator`
    "tools/streamlib-pack",      # Package-artifact assembly shared between `streamlib pack` (CLI) and `streamlib-build-orchestrator` (runtime) — emits a .slpkg or an extracted staged dir
    "tools/streamlib-build-orchestrator", # Default polyglot BuildOrchestrator impl — runtime materialization of source packages (depends on engine for the trait + cargo-build for the helpers)
    "runtime/streamlib-runtime",   # Standalone runtime binary (spawned by CLI)
    "sdk/streamlib-processor-schema", # Processor schema types + YAML parser shared between streamlib runtime and streamlib-macros
    "sdk/streamlib-jtd-codegen", # JTD-codegen pipeline: schema YAML → typed Rust/Python/TypeScript bindings
    "sdk/streamlib-idents",    # Structured schema identifiers, semver, manifest/lockfile types (#399)
    "sdk/streamlib-macros",    # Procedural macros for reducing boilerplate
    "sdk/streamlib-processor-extract", # Shared `#[processor(...)]` grammar + syn source-scan that derives the `processors:` manifest from code (#1411)
    "runtime/streamlib-plugin-abi", # ABI-stable FFI types for dynamic plugins
    "adapters/streamlib-adapter-abi", # ABI-stable surface adapter contract (in-tree + 3rd-party adapters)
    "runtime/streamlib-consumer-rhi", # Consumer-side carve-out of the Vulkan RHI — DMA-BUF FD import + bind + map. cdylibs depend on this NOT the full streamlib so the FullAccess capability boundary is type-system enforced (Linux)
    "adapters/streamlib-adapter-vulkan", # Vulkan-native surface adapter — canonical implementor of VulkanWritable / VulkanImageInfoExt (Linux)
    "adapters/streamlib-adapter-vulkan-abi", # Cross-DSO callback table for streamlib-adapter-vulkan — extern "C" vtable consumed by host wiring + cdylib shim (#887)
    "adapters/streamlib-adapter-vulkan-helpers", # Test-helper binaries for streamlib-adapter-vulkan — held in a dedicated crate so streamlib doesn't leak into adapter-vulkan's runtime dep graph (Linux)
    "adapters/streamlib-adapter-opengl", # OpenGL/EGL surface adapter — canonical implementor of GlWritable; DMA-BUF + DRM modifier import (Linux)
    "adapters/streamlib-adapter-opengl-abi", # Cross-DSO callback table for streamlib-adapter-opengl — extern "C" vtable consumed by host wiring + cdylib shim (#888)
    "adapters/streamlib-adapter-cpu-readback", # Explicit GPU→CPU surface adapter — sole implementor of CpuReadable / CpuWritable (Linux)
    "adapters/streamlib-adapter-cpu-readback-abi", # Cross-DSO callback table for streamlib-adapter-cpu-readback — extern "C" vtable consumed by host wiring + cdylib shim (#890)
    "adapters/streamlib-adapter-cpu-readback-helpers", # Test-helper binaries for streamlib-adapter-cpu-readback — held in a dedicated crate so streamlib doesn't leak into adapter-cpu-readback's runtime dep graph (Linux)
    "adapters/streamlib-adapter-cuda", # CUDA surface adapter — Vulkan↔CUDA OPAQUE_FD interop foundation for GPU-resident AI inference (Linux, #587)
    "adapters/streamlib-adapter-cuda-abi", # Cross-DSO callback table for streamlib-adapter-cuda — extern "C" vtable consumed by host wiring + cdylib shim (#891)
    "adapters/streamlib-adapter-cuda-helpers", # Test-helper crate for streamlib-adapter-cuda — held in a dedicated crate so streamlib (and the optional CUDA SDK) don't leak into adapter-cuda's runtime dep graph (Linux)
    "adapters/streamlib-adapter-skia", # Skia surface adapter — composes on streamlib-adapter-vulkan; customer sees skia::Surface directly, never GrVkImageInfo / VkImageLayout (Linux)
    "adapters/streamlib-adapter-skia-abi", # Cross-DSO callback table for streamlib-adapter-skia — extern "C" vtable consumed by host wiring + cdylib shim (#889)
    "sdk/streamlib-deno-native", # FFI cdylib for Deno subprocess iceoryx2 access
    "sdk/streamlib-python-native", # FFI cdylib for Python subprocess iceoryx2 access
    "runtime/streamlib-ipc-types",  # Shared iceoryx2 payload types for cross-process IPC
    "runtime/streamlib-moq",        # MoQ-over-QUIC transport library (sessions + catalog); the @tatolab/moq package's processors + the api-server build on it
    "vendor/tatolab-vulkanalia",     # Vendored vulkanalia fork (Apache-2.0) — see docs/architecture/vendored-vulkanalia.md
    "vendor/tatolab-vulkanalia-sys", # Vendored vulkanalia-sys fork (Apache-2.0) — see docs/architecture/vendored-vulkanalia.md
    "vendor/tatolab-vulkanalia-vma", # Vendored vulkanalia-vma fork (Apache-2.0, VMA 3.3.0 + Vulkan-Headers 1.4.309) — see docs/architecture/vendored-vulkanalia.md
    # `examples/*` and most `packages/*` are NOT workspace members. They are
    # standalone, registry-only units (each headed to its own repo): every
    # dependency — the streamlib SDK, package crates, adapters — resolves
    # from the static registry by version, and each carries its own
    # `[workspace]` self-root. Only the zone crates (`runtime/*`, `sdk/*`,
    # `adapters/*`, `tools/*`, `vendor/*`) and `xtask` form this workspace.
    # Build a package/example with `cd <dir> && cargo build`, or via
    # `streamlib add` / runtime `Strategy::Registry` for packages.
    #
    # The exceptions below are HOST-SIDE, non-distributable packages. They
    # are not shipped through the registry, so they path-dep the zone crates
    # and stay workspace members (each carries `publish = false`, which also
    # keeps it out of the release closure):
    #
    # - `api-server` is the always-present control plane. It drives
    #   `RuntimeOperations`, the processor registry, pubsub, and the graph
    #   API — it is a host, not a loadable plugin — and is statically linked
    #   into `streamlib-runtime` (crate-type `rlib`, registered in-process on
    #   `PROCESSOR_REGISTRY`). A host cannot be dlopen'd as a plugin, so it
    #   ships no `cdylib`.
    # - The `test-fixtures` packages are INTERNAL test infrastructure. The
    #   engine integration tests build them in-place
    #   (`cargo build -p streamlib-test-fixtures --features plugin`) and load
    #   the resulting cdylib, so they must stay workspace members.
    "packages/api-server",       # @tatolab/api-server — host-side HTTP + WebSocket control plane, statically linked into streamlib-runtime
    "packages/test-fixtures",    # @tatolab/test-fixtures — attribute-macro test fixtures (TestConfiguredProcessor)
    "packages/test-fixtures-abi-mismatch", # @tatolab/test-fixtures-abi-mismatch — hand-crafted STREAMLIB_PLUGIN with tampered abi_version for the load_project rejection test
]

[workspace.package]
version = "0.7.3"
edition = "2024"
rust-version = "1.85"
authors = ["Jonathan Fontanez <fontanezj1@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/tato123/streamlib"

# Workspace-wide clippy lints. Library crates opt in by adding
# `[lints] workspace = true` in their own Cargo.toml. Binary-only crates
# (streamlib-cli, streamlib-runtime, xtask, examples) do not opt in, because
# stdout IS the user output channel for them. The `disallowed-macros` list
# itself lives in clippy.toml at the workspace root. See docs/logging.md.
[workspace.lints.clippy]
disallowed_macros = "deny"

[workspace.dependencies]
# Core dependencies
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
# Specialized msgpack `bin` (de)serialization for Vec<u8> fields — jtd-codegen
# emits `#[serde(with = "serde_bytes")]` for JTD `elements: type: uint8`
# shapes so `rmp_serde` writes a `bin` tag (1× wire footprint) instead of an
# array of integers (~1.5× footprint for ≥128 byte values).
serde_bytes = "0.11"
toml = "0.8"
toml_edit = "0.22"
rmp-serde = "1.3"
# Low-level msgpack encode primitives (write_map_len / write_str) used to
# stream a `Bag` to bytes without cloning the value tree. Same msgpack-rust
# project as `rmp-serde` / `rmpv`, which already pull it transitively.
rmp = "0.8"
# msgpack dynamic value tree (Value enum with a native `bin` variant) backing
# the engine-free SDK `Bag`. Companion crate to `rmp-serde` from the same
# msgpack-rust project; `with-serde` enables `rmpv::ext::{from_value,to_value}`.
rmpv = { version = "1.3", features = ["with-serde"] }

# Hashing
sha2 = "0.10"
tempfile = "3.14"

# Blocking HTTP client — used by the engine module-loader resolver to
# fetch a remote `.slpkg` for `Strategy::Url`. Blocking (not async) by
# design: the resolver runs on `spawn_blocking`, where a runtime-aware
# client (reqwest::blocking) would panic on the ambient tokio context.
ureq = "2"

# Typed bitflags (used by streamlib-adapter-abi)
bitflags = "2.6"

# Platform bindings (objc2 ecosystem - latest versions)
# Note: All objc2 crates must use compatible versions
objc2 = "0.6.3"
objc2-metal = "0.3.2"
objc2-io-surface = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-video = "0.3.2"
objc2-core-media = "0.3.2"
objc2-foundation = "0.3.2"
objc2-av-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-core-text = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-vision = "0.3.2"
libc = "0.2.177"

# Vulkan bindings (vendored tatolab fork — VMA 3.3.0 + Vulkan-Headers 1.4.309
# patches; Apache-2.0). The `package =` renames keep `use vulkanalia::` code
# untouched while the workspace resolves the vendored crates by path locally
# and by `version` + `registry` in a published closure. See
# docs/architecture/vendored-vulkanalia.md.
vulkanalia = { package = "tatolab-vulkanalia", path = "vendor/tatolab-vulkanalia", version = "0.35.0", features = ["libloading", "provisional", "window"] }
vulkanalia-vma = { package = "tatolab-vulkanalia-vma", path = "vendor/tatolab-vulkanalia-vma", version = "0.9.0" }

# SPIR-V reflection for descriptor-set-layout validation in the compute-kernel RHI.
rspirv-reflect = "0.9.0"

# DLPack v0.8 + v1.0 `#[repr(C)]` ABI mirrors for cross-framework
# zero-copy tensor handoff (PyTorch / JAX / NumPy `from_dlpack`).
# Pinned exact (`=0.6.0`) so the upgrade story is explicit — a layout
# change upstream is an API-break here, not a silent minor bump.
# `default-features = false` keeps the dep surface to `bitflags` +
# `snafu`; the optional `pyo3` / `ndarray` / `cudarc` features stay off
# so the cdylib boundary doesn't pick up Python or ML transitive deps.
dlpark = { version = "=0.6.0", default-features = false }

# CUDA bindings — used by `streamlib-adapter-cuda-helpers` (test-only,
# behind a `cuda` Cargo feature) and by the polyglot cdylib runtimes
# (`streamlib-python-native`, `streamlib-deno-native`) to import OPAQUE_FD
# Vulkan memory + timeline semaphores into CUDA via
# `cudaImportExternalMemory` / `cudaImportExternalSemaphore`. The cdylibs
# depend on cudarc unconditionally (Linux-only) but `fallback-dynamic-loading`
# means libcuda.so is only required at runtime — build hosts without a
# CUDA toolkit still compile the cdylib, and runtime detection via
# `cudarc::runtime::sys::is_culib_present()` lets the adapter fail
# gracefully on CUDA-less machines.
#
# Pin to `cuda-12090` so the build does NOT require `nvcc` (the
# `cuda-version-from-build-system` alternative errors when nvcc is
# absent). The `_v2`-suffixed external-resource symbols this binding
# exposes remain ABI-stable through CUDA 13.x — runtime libcudart
# continues to export them, so the dlopen path resolves regardless of
# which CUDA version is installed on the runner. `default-features =
# false` skips cuBLAS / cuRAND / NVRTC; we only need `runtime` (for
# external-memory + external-semaphore APIs).
cudarc = { version = "0.19", default-features = false, features = ["driver", "runtime", "fallback-dynamic-loading", "cuda-12090"] }

# Skia bindings for the streamlib-adapter-skia crate.
#
# - `vulkan`: GrDirectContext + GrVkImageInfo + GrBackendRenderTarget
#   machinery needed to wrap a host-allocated VkImage as a SkSurface.
# - `binary-cache` (default): pull pre-built Skia binaries from the
#   rust-skia release tarballs instead of compiling Skia C++ from
#   source. Without this the build needs `git-sync-deps`, GN, ninja,
#   and 15+ minutes — way out of scope for this repo's CI.
#
# We deliberately do NOT enable `textlayout` / `embed-icudtl` / `pdf`
# (the rust-skia defaults) — those drag fontconfig + freetype + harfbuzz
# + ICU / harfbuzz-icu link deps that aren't available in dev-package
# form on a baseline Linux install. The text-rendering Python smoke
# test from the v1 issue body moves to the polyglot Skia follow-up
# along with the rest of the wrapper layer; the Rust adapter doesn't
# render text.
skia-safe = { version = "0.86", features = ["vulkan", "gl"] }

# Shader compilation
# TODO: Add when implementing HLSL shader compilation:
#   - hassle-rs (DXC wrapper for HLSL → SPIR-V)
#   - spirv-cross-rs (SPIR-V → Metal/Vulkan)

# WebRTC
str0m = "0.11.1"

# MoQ (Media over QUIC) - optional transport layer (cloudflare/moq-rs)
moq-transport = "0.14.1"
web-transport = "0.10"
quinn = "0.11"
rustls-native-certs = "0.8"

# HTTP/Web
axum = { version = "0.8.8", features = ["ws"] }
tower-http = "0.6.8"
hyper = "1.7.0"


# YUV/RGB conversion - REMOVED (now using GPU-accelerated VTPixelTransferSession)
# yuv = "0.8"

