# Root workspace configuration for streamlib
# This coordinates the workspace and provides testing infrastructure

[tool.uv.workspace]
members = [
    "libs/streamlib",
]

[tool.uv]
# uv will automatically download Python 3.11+ if not found
# This ignores the macOS system Python 3.9
dev-dependencies = [
    # Testing tools
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
streamlib = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["libs/streamlib/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[project]
name = "streamlib-workspace"
version = "0.1.0"
description = "Workspace root for streamlib"
requires-python = ">=3.11"
dependencies = []
